feat: bottom section functionality
The Grid sorts based on user selection of Continent Name or temperature.

--- a/index.html
+++ b/index.html
@@ -174,312 +174,27 @@
       <div class="cont-header">
         <div class="cont-title">Cities across continents at a Glance</div>
         <div class="sort-controls">
-          <div class="cont-sort">
-            Continent&nbsp;Name&nbsp;<img
-              class="cont-sort-icon"
-              src="./assets/htmlcss/General Images & Icons/downArrow.svg"
-              alt=""
-            />
-          </div>
-          <div class="temp-sort">
-            Temperature&nbsp;<img
+          <div class="cont-sort" id="cont-name-sort">
+            Continent&nbsp;Name
+            <img
               class="cont-sort-icon"
               src="./assets/htmlcss/General Images & Icons/upArrow.svg"
               alt=""
+              id="cont-name-sort-icon"
+            />
+          </div>
+          <div class="temp-sort" id="temp-sort">
+            Temperature
+            <img
+              class="cont-sort-icon"
+              src="./assets/htmlcss/General Images & Icons/downArrow.svg"
+              alt=""
+              id="temp-sort-icon"
             />
           </div>
         </div>
       </div>
-      <ul class="cont-grid">
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-        <li class="cont-item">
-          <div class="cont-item-title">
-            <div class="cont-name">Asia</div>
-            <div class="cont-temp">
-              <img
-                class="cont-temp-icon"
-                src="./assets/htmlcss/Weather Icons/sunnyIcon.svg"
-                alt=""
-              />
-              25&nbsp;&deg;C
-            </div>
-          </div>
-          <div class="cont-content">
-            <div class="cont-city-name">Delhi,&nbsp;10:10&nbsp;AM</div>
-            <div class="cont-humidity">
-              <img
-                src="./assets/htmlcss/Weather Icons/humidityIcon.svg"
-                alt=""
-                class="cont-humidity-icon"
-              />
-              53%
-            </div>
-          </div>
-        </li>
-      </ul>
+      <ul class="cont-grid"></ul>
     </section>
     <script type="module"></script>
     <script type="application/json" src="assets/data.json"></script>
